# gmxapi

./: .travis.yml  CMakeLists.txt  requirements.txt  setup.py  tox.ini
ci_scripts/: install_gromacs_2021.sh  pygmx.sh
docs/: Doxyfile.in  conf.py  install.rst  projectstructure.rst  release-notes.rst  requirements.txt  usage.rst
docs/gmxapi/reference/: contributing.rst  datamodel.rst  executionmodel.rst
docs/gmxapi/userguide/: usage.rst
docs/layers/: workspec_schema_0_2.rst
packaging/gmxapi/gmxapi/: __init__.py
python_packaging/documentation/reference/: datamodel.rst  reference.rst  workspec_schema_0_2.rst
python_packaging/documentation/reference/diagrams/: outputAccessSequence.pu
python_packaging/src/: CMakeLists.txt
python_packaging/src/gmxapi/: datamodel.py  exceptions.py  testsupport.py
src/: CMakeLists.txt
src/compatibility/: CMakeLists.txt
src/compatibility/gmxapicompat/: exceptions.h  gmxapicompat.h  gmxapitypes.h  gromacs2019.h
src/compatibility/test/: CMakeLists.txt  basicmapping.cpp
src/gmx/: CMakeLists.txt  __init__.py  context.py  workflow.py
src/gmx/_workspec_0_2/: __init__.py
src/gmx/core/: CMakeLists.txt
src/gmx/core/compatibility/: CMakeLists.txt  gmxapicompat.cpp
src/gmx/core/compatibility/include/gmxapicompat/: gmxapicompat.h  gmxapitypes.h  gromacs2019.h
src/gmx/test/: siminputstuff.py  test_mpiarraycontext.py  tprstuff.py
src/gromacs/mdrun/: CMakeLists.txt  runner.cpp  runner.h  simulationinput.cpp  simulationinput.h  simulationinput_fwd.h  simulationinpututility.h
src/gromacs/modularsimulator/: modularsimulator.cpp  modularsimulator.h
